tests/snapshots/conformance__y_number_simple_real.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[123.456789]
stdout --- 
[123.456789]
stderr --- 
<empty>
