tests/snapshots/conformance__y_object_basic.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"asd":"sdf"}
stdout --- 
{
    "asd": "sdf"
}
stderr --- 
<empty>
