tests/snapshots/conformance__y_object_duplicated_key.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"a":"b","a":"c"}
stdout --- 
{
    "a": "c"
}
stderr --- 
<empty>
