tests/snapshots/conformance__y_object_duplicated_key_and_value.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"a":"b","a":"b"}
stdout --- 
{
    "a": "b"
}
stderr --- 
<empty>
