tests/snapshots/conformance__y_object_empty.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{}
stdout --- 
{

}
stderr --- 
<empty>
