tests/snapshots/conformance__y_object_empty_key.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"":0}
stdout --- 
{
    "": 0
}
stderr --- 
<empty>
