tests/snapshots/conformance__y_object_escaped_null_in_key.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"foo\u0000bar": 42}
stdout --- 
{
    "foo\u0000bar": 42
}
stderr --- 
<empty>
