tests/snapshots/conformance__y_object_simple.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
{"a":[]}
stdout --- 
{
    "a": []
}
stderr --- 
<empty>
